refined typography and spacing across sections

--- a/deadline-loading.html
+++ b/deadline-loading.html
@@ -9,7 +9,7 @@
   <body>
     <!-- /*
     Svg Projects
-    Author: Jonathan Trancozo
+    Author: Antony Emongoluk
     Language: HTML, CSS3 and SVG
     */ -->
     <div id="deadline">
